--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ html {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  font-size: 16px;
+  font-size: 1em;
   padding: 0;
   margin: 0;
 }
