--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
     font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
-    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Nunito Sans", "Avenir", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #222; }
 
 /* Typography
@@ -25,7 +25,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     margin-bottom: 2rem;
-    font-weight: 300;
+    font-weight: 600;
     color: #0F346C; }
   h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
   h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
@@ -46,6 +46,13 @@ h1, h2, h3, h4, h5, h6 {
   
   p {
     margin-top: 0; }
+
+hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
   
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -103,13 +110,12 @@ ul {
     top: 0;
     width: 100%;
     background-color: #fff;
-    border-bottom: 1px #ddd solid;
+    box-shadow: 0px 1px 0px rgba(17,17,26,0.05), 0px 0px 8px rgba(17,17,26,0.1);
 }
 
 .header-container {
     max-width: 960px;
     margin: 0 auto;
-
     height: var(--header-height);
 }
 
@@ -136,6 +142,29 @@ ul {
 
 /* Recipe Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.recipe-container {
+  padding-top: var(--header-height);
+}
+
 .recipe-ingredients h5, .recipe-steps h5 {
     text-transform: uppercase;
+}
+
+/* Footer
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+footer {
+  height: 160px;
+  background-color: #0f346c;
+  color: #eee;
+  padding: 3em 0;
+}
+
+.footer-container {
+  height: inherit;
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  max-width: 960px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
