--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --header-height: 60px;
+    --apron-blue: #0F346C;
+    --apron-red: #F26226;
   }
 
 /* Base Styles
@@ -12,6 +14,7 @@ html {
 }
   body {
     scroll-margin-top: var(--header-height);
+    /* overflow: hidden; */
     overflow-y: auto;
     margin: 0;
     font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
@@ -26,7 +29,8 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     margin-bottom: 2rem;
     font-weight: 600;
-    color: #0F346C; }
+    color: var(--apron-blue); }
+    
   h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
   h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
   h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -45,7 +49,8 @@ h1, h2, h3, h4, h5, h6 {
   }
   
   p {
-    margin-top: 0; }
+    margin-top: 0;
+   }
 
 hr {
     border: 0;
@@ -57,23 +62,25 @@ hr {
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    /* position: relative; */
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 20px;
-    box-sizing: border-box;
+  /* position: relative; */
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; }
+
+/* For devices larger than 400px */
+@media (min-width: 400px) {
+  .container {
+    width: 85%;
+    padding: 0; }
 }
 
-    /* For devices larger than 400px */
-@media (min-width: 400px) {
-    .container {
-      width: 85%;
-      padding: 0; }
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+  .container {
+    width: 80%; }
   }
-
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -85,30 +92,30 @@ a:hover {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-    list-style: circle inside; }
-  ol {
-    list-style: decimal inside; }
-  ol, ul {
-    padding-left: 0;
-    margin-top: 0; }
-  ul ul,
-  ul ol,
-  ol ol,
-  ol ul {
-    margin: 1.5rem 0 1.5rem 3rem;
-    font-size: 90%; }
-  li {
-    margin-bottom: 0.5rem; }
+  list-style: inside; }
+ol {
+  list-style: decimal inside; }
+ol, ul {
+  padding-left: 0;
+  margin-top: 0; }
+ul ul,
+ul ol,
+ol ol,
+ol ul {
+  margin: 1.5rem 0 1.5rem 3rem;
+  font-size: 90%; }
+li {
+  margin-bottom: 0.5rem; }
 
 
-/* Header
+  /* Header
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .header {
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
-    width: 100%;
+    /* width: 100%; */
     background-color: #fff;
     box-shadow: 0px 1px 0px rgba(17,17,26,0.05), 0px 0px 8px rgba(17,17,26,0.1);
 }
@@ -116,55 +123,201 @@ ul {
 .header-container {
     max-width: 960px;
     margin: 0 auto;
-    height: var(--header-height);
+    /* height: var(--header-height); */
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
-    height:100%;
+  max-height: var(--header-height);
+  width: auto;
+  align-self: center;
 }
 
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  text-transform: uppercase;
+}
 
-/* Container
+.nav-links a {
+  padding: 0 1.8em;
+  text-decoration: none;
+}
+
+.nav-links a:hover, a:active {
+  color: var(--apron-red);
+}
+
+/* For devices smaller than 550px */
+@media (max-width: 550px) {
+  nav {
+    flex-direction: column;
+  }
+  .nav-links {
+    justify-content: space-evenly;
+  }
+  .nav-links a {
+    padding: 0.2em;
+  }
+}
+
+/* Recipe Page Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.container {
-    margin-top: 100px;
+.recipe-grid {
+  display: grid;
+  grid-template-columns: minmax(200px,1fr) 4fr;
+  column-gap: 3em;
+  /* margin-top: 100px; */
+}
+
+/* Meet Page Grid
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.meet-grid {
+  display: grid;
+  grid-template-columns: repeat(3,minmax(250px,1fr));
+  grid-gap: 3em;
+  margin-top: 100px;
+}
+
+.meet-grid h2 {
+  grid-column: span 3;
+}
+
+.meeting-details {
+  grid-column: span 3;
+}
+
+.course {
+  /* padding: 2em; */
+  border-radius: 8px;
+  box-shadow: 0px 4px 16px rgba(17,17,26,0.1), 0px 8px 32px rgba(17,17,26,0.05);}
+
+.course-name {
+  background-color: var(--apron-blue);
+  color: #fff;
+  padding: 0.5em;
+  text-transform: uppercase;
+  font-size: 1.4em;
+  text-align: center;
+  letter-spacing: 0.1em;
+}
+
+.course ul {
+  padding: 1.5em;
+}
+
+.meeting-details p {
+  font-size: 1.2em;
+}
+
+/* For devices smaller than 960px */
+@media (max-width: 960px) {
+  .meet-grid {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .meet-grid h2 {
+    grid-column: span 1;
+  }
+  
+  .meeting-details {
+    grid-column: span 1;
+  }
+  .course {
+    width: 250px;
+  }
 }
 
 /* Sidebar
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .sidebar {
     /* background-color: salmon; */
+    margin-top: var(--header-height);
+    position: fixed;
+    z-index: -1;
 }
 
 .sidebar a {
     display: block;
+    padding: 0.5em 1em;
+}
+
+.sidebar a:first-of-type {
+  padding-top: 1.5em;
+}
+
+.sidebar-title {
+  background-color: var(--apron-blue);
+  color: #fff;
+  font-weight: 700;
+  padding: 0.5em 1em;
 }
 
 /* Recipe Cards
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.content {
+  grid-column-start: 2;
+}
+
 .recipe-container {
   padding-top: var(--header-height);
+  
+}
+
+.recipe-container p {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
 
 .recipe-ingredients h5, .recipe-steps h5 {
     text-transform: uppercase;
 }
 
+.recipe-description {
+  padding: 0;
+  margin: 0;
+  font-style: italic;
+}
+
+/* For devices smaller than 700px */
+@media (max-width: 700px) {
+  .recipe-grid{
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .sidebar {
+    position: relative;
+    width: 300px;
+    background: #F7F7F7;
+    box-shadow: 0px 4px 16px rgba(17,17,26,0.1), 0px 8px 32px rgba(17,17,26,0.05);
+  }
+  .content {
+    grid-column-start: 1;
+  }
+}
+
 /* Footer
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 footer {
-  height: 160px;
+  height: 220px;
   background-color: #0f346c;
   color: #eee;
-  padding: 3em 0;
+  margin-top: 4em;
 }
 
 .footer-container {
-  height: inherit;
+  height: inherit ;
   display:flex;
   flex-direction: column;
   justify-content: flex-end;
+  box-sizing: border-box;
   max-width: 960px;
   margin: 0 auto;
-  box-sizing: border-box;
+  padding: 3em 1em;
 }
