--- a/style.css
+++ b/style.css
@@ -285,6 +285,10 @@ nav {
   font-style: italic;
 }
 
+.recipe-steps {
+  padding: 2em 0;
+}
+
 /* For devices smaller than 700px */
 @media (max-width: 700px) {
   .recipe-grid{
@@ -299,6 +303,47 @@ nav {
   }
   .content {
     grid-column-start: 1;
+  }
+}
+
+/* Theme Page Grid
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.theme-grid {
+  display: flex;
+  grid-gap: 4em;
+  align-items: flex-start;
+  margin-top: 50px;
+}
+
+.theme-grid img {
+  max-width: 450px;
+}
+
+.blurb {
+  max-width: 20em;
+  line-height: 1.8em;
+}
+
+blockquote
+{
+  margin: 2em 0 2em 2em;
+  /* margin-left: 32px; */
+  border-left: 4px solid salmon;
+  padding-left: 0.5em;
+  line-height: 1.6em;
+}
+
+/* For devices smaller than 960px */
+@media (max-width: 750px) {
+  .theme-grid {
+    flex-direction: column;
+    align-items: center;
+    /* grid-template-columns: 1fr; */
+    /* justify-items: center; */
+  }
+  .blurb {
+    padding: 0 2em;
+    max-width: 26em;
   }
 }
 
