--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ li {
     /* width: 100%; */
     background-color: #fff;
     box-shadow: 0px 1px 0px rgba(17,17,26,0.05), 0px 0px 8px rgba(17,17,26,0.1);
+    z-index: 3;
 }
 
 .header-container {
@@ -263,11 +264,12 @@ nav {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .content {
   grid-column-start: 2;
+  z-index: 2;
 }
 
 .recipe-container {
   padding-top: var(--header-height);
-  
+  scroll-margin-top: var(--header-height);
 }
 
 .recipe-container p {
